after class review added a few fun tricks

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -40,8 +40,8 @@
     "#2/12 == 1/6 == .1666\n",
     "outcomes = [1,2,3,4,5,6]\n",
     "n_simulations = 100_000\n",
-    "n_trials = 2\n",
-    "die_rolls = np.random.choice(outcomes,(n_simulations,n_trials))\n",
+    "n_dice = 2\n",
+    "die_rolls = np.random.choice(outcomes,(n_simulations,n_dice))\n",
     "df = pd.DataFrame(die_rolls)\n",
     "len( df[ (df[0] == df[1]) ]) / len(df)"
    ]
@@ -72,8 +72,8 @@
     "#    5/8\n",
     "outcomes = [\"H\",\"T\"]\n",
     "n_simulations = 100_000\n",
-    "n_trials = 8\n",
-    "coin_flips = np.random.choice(outcomes,(n_simulations,n_trials))\n",
+    "n_coins = 8\n",
+    "coin_flips = np.random.choice(outcomes,(n_simulations,n_coins))\n",
     "head_count = (coin_flips == \"H\").sum(axis=1) #does the sum per \"column\" (simulation), axis can be 0 or 1 for columns or rows (r0w,co1umn)\n",
     "print((head_count == 3).mean(), \"3 head exact\")\n",
     "print((head_count > 3).mean(), \"more than 3 heads\")"
@@ -103,8 +103,31 @@
     "# 1/4 * 1/4 = 1/16\n",
     "outcomes = [\"WD\",\"WD\",\"WD\",\"DS\"]\n",
     "n_simulations = 100_000\n",
-    "n_trials = 2\n",
-    "bill_board = np.random.choice(outcomes,(n_simulations,n_trials))\n",
+    "n_billboards = 2\n",
+    "billboard_array = np.random.choice(outcomes,(n_simulations,n_billboards))\n",
+    "DS_Student = (billboard_array == \"DS\").sum(axis=1) #does the sum per \"column\" (simulation), axis can be 0 or 1 for columns or rows (r0w,co1umn)\n",
+    "print((DS_Student == 2).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06255\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from class\n",
+    "outcomes = [\"WD\",\"DS\"]\n",
+    "n_simulations = 100_000\n",
+    "n_billboards = 2\n",
+    "bill_board = np.random.choice(outcomes,(n_simulations,n_billboards),p=[0.75 , 0.25])\n",
     "DS_Student = (bill_board == \"DS\").sum(axis=1) #does the sum per \"column\" (simulation), axis can be 0 or 1 for columns or rows (r0w,co1umn)\n",
     "print((DS_Student == 2).mean())"
    ]
@@ -143,6 +166,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7229"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#from class\n",
+    "mean = 3\n",
+    "sd = 1.5\n",
+    "n_days = 5\n",
+    "poptarts_bought_per_day = np.random.normal(mean,sd,size=(n_simulations,n_days))\n",
+    "poptarts_bought_per_week = poptarts_bought_per_day.sum(axis=1)\n",
+    "(poptarts_bought_per_week < 17).mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.21036"
+       "0.21106"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +270,28 @@
     "failures = (data <= corrupt_install).sum(axis=1)\n",
     "#print(pd.Series(failures).value_counts(),\"\\n\")\n",
     "print(((failures == 0).mean() *100),\"% chance of no failures @ 100\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8183 success@50\n"
+     ]
+    }
+   ],
+   "source": [
+    "## from class\n",
+    "outcomes = [\"S\",\"F\"]\n",
+    "n_students = 50\n",
+    "downloads = np.random.choice(outcomes, (n_simulations,n_students), p=[(249/250),(1/250)])\n",
+    "success = (downloads == \"S\").sum(axis=1)\n",
+    "print((success == n_students).mean(), \"success@50\")\n"
    ]
   },
   {
@@ -314,20 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2    43980\n",
-      "3    34318\n",
-      "1    18994\n",
-      "0     2708\n",
+      "0     2807\n",
+      "1    18894\n",
+      "2    44268\n",
+      "3    34031\n",
       "dtype: int64 \n",
       "\n",
-      "2.708 % chance of no Food truck within 3 days\n"
+      "2.807 % chance of no Food truck within 3 days\n"
      ]
     }
    ],
@@ -337,7 +408,7 @@
     "n_simulations = 100_000\n",
     "random_chance = np.random.random((n_simulations,n_days))\n",
     "food_truck_arrived = (random_chance <= food_truck).sum(axis=1)\n",
-    "print(pd.Series(food_truck_arrived).value_counts(),\"\\n\")\n",
+    "print(pd.Series(food_truck_arrived).value_counts().sort_index(),\"\\n\")\n",
     "print(((food_truck_arrived == 0).mean() *100),\"% chance of no Food truck within\",n_days, \"days\")"
    ]
   },
@@ -350,24 +421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5    31838\n",
-      "6    24570\n",
-      "4    22733\n",
-      "3     9783\n",
-      "7     8183\n",
-      "2     2507\n",
-      "1      352\n",
-      "0       34\n",
+      "0       30\n",
+      "1      366\n",
+      "2     2529\n",
+      "3     9882\n",
+      "4    22426\n",
+      "5    31732\n",
+      "6    24738\n",
+      "7     8297\n",
       "dtype: int64 \n",
       "\n",
-      "99.966 % chance of Food truck arriving within 7 days\n"
+      "99.97 % chance of Food truck arriving within 7 days\n"
      ]
     }
    ],
@@ -377,7 +448,7 @@
     "n_simulations = 100_000\n",
     "random_chance = np.random.random((n_simulations,n_days))\n",
     "food_truck_arrived = (random_chance <= food_truck).sum(axis=1)\n",
-    "print(pd.Series(food_truck_arrived).value_counts(),\"\\n\")\n",
+    "print(pd.Series(food_truck_arrived).value_counts().sort_index(),\"\\n\")\n",
     "print(((food_truck_arrived > 0).mean() *100),\"% chance of Food truck arriving within\",n_days, \"days\")"
    ]
   },
@@ -434,23 +505,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as wg\n",
+    "from ipywidgets import interact,interactive, fixed, interact_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_match_student(students):\n",
+    "    outcomes = range(365)\n",
+    "    n_simulations = 100_000\n",
+    "    bill_board = np.random.choice(outcomes,(n_simulations,students))\n",
+    "    return(round(((pd.DataFrame(bill_board).nunique(axis=1) < students).mean()*100),1),\"% chance of matching birthdays with\",students,\"students\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.50822 % chance of matching birthdays with 23 students\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7075b943e1b4a3eaddb7d04f1bee310",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=23, description='students', max=69, min=-23), Output()), _dom_classes=('…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "outcomes = range(365)\n",
-    "n_simulations = 100_000\n",
-    "n_trials = int((input(\"# of Students\")))\n",
-    "bill_board = np.random.choice(outcomes,(n_simulations,n_trials))\n",
-    "print((pd.DataFrame(bill_board).nunique(axis=1) < n_trials).mean(),\"% chance of matching birthdays with\",n_trials,\"students\")"
+    "interact(percent_match_student,students=23);"
    ]
   },
   {
